--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "004-projet-markdown-2",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gsap": "^3.6.1",
     "marked": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
